<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_green">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/create_your_account"
        android:textSize="@dimen/dimen_24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ciAvatar"
        android:layout_width="125dp"
        android:layout_height="125dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/selectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera_white_24dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@id/ciAvatar"
        app:layout_constraintEnd_toEndOf="@id/ciAvatar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/dim_25dp"
        android:hint="@string/first_name"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ciAvatar"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_username_white_24dp"
            android:drawablePadding="@dimen/dim_10dp"
            android:inputType="text"
            android:shadowColor="@color/white"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHighlight="@color/light_green"
            android:textColorHint="@color/white"
            android:textSize="@dimen/dimen_18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/dim_25dp"
        android:hint="@string/last_name"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilFirstName">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_username_white_24dp"
            android:drawablePadding="@dimen/dim_10dp"
            android:inputType="text"
            android:shadowColor="@color/white"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHighlight="@color/light_green"
            android:textColorHint="@color/white"
            android:textSize="@dimen/dimen_18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/dim_25dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilLastName">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_username_white_24dp"
            android:drawablePadding="@dimen/dim_10dp"
            android:inputType="textEmailAddress"
            android:shadowColor="@color/white"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHighlight="@color/light_green"
            android:textColorHint="@color/white"
            android:textSize="@dimen/dimen_18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/dim_25dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:drawablePadding="@dimen/dim_10dp"
            android:inputType="textPassword"
            android:shadowColor="@color/white"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHighlight="@color/light_green"
            android:textColorHint="@color/white"
            android:textSize="@dimen/dimen_18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/Button"
        android:background="@drawable/selector_rounded_button_light_green"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAlreadyRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:padding="@dimen/dim_5dp"
        android:text="@string/already_registered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>